site: Fix Schedule a demo button text so it is not clipped

--- a/src/_sass/home.scss
+++ b/src/_sass/home.scss
@@ -111,6 +111,7 @@
   font-family: $tilt2-font-sans;
   font-size: $tilt2-button-font-size--large;
   font-weight: $tilt2-font-weight-sans-bold;
+  padding: 0;
   height: $tilt2-button-height--large;
   width: 270px;
   display: flex;
